--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="./static/img/bg-1.svg" width="400px" alt="Your Image">
+                <img src="static/img/bg-1.svg" width="400px" alt="Your Image">
             </div>
         </section>
         <section class="container">
@@ -67,7 +67,7 @@
         <section id="About" class="section-2">
             <div class="about-section pt-8 container" >
                 <div class="about-image" data-aos="fade-left">
-                    <img src="./static/img/bg-1.svg" alt="About Me Image">
+                    <img src="static/img/bg-1.svg" alt="About Me Image">
                 </div>
                 <div class="about-content" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
                     <h2 class="font-title">I’m a Designer</h2>
@@ -103,7 +103,7 @@
                         <div class="carousel-items-p" style="transform: translateX(-0px);">
                             <div class="carousel-item-p" data-category="html">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">Tomas George</h2>
@@ -111,7 +111,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="javascript">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">Contact List App</h2>
@@ -119,7 +119,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="javascript">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">Contact List App</h2>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="javascript">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">Contact List App</h2>
@@ -135,7 +135,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="css">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">Space Invaders</h2>
@@ -143,7 +143,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="nodejs">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">NodeJS Project</h2>
@@ -151,7 +151,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="wordpress">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">WordPress Theme</h2>
@@ -159,7 +159,7 @@
                             </div>
                             <div class="carousel-item-p" data-category="psd">
                                 <div class="img_inner">
-                                    <img src="/static/img/blog3.jpg" alt="Tomas George Project">
+                                    <img src="static/img/blog3.jpg" alt="Tomas George Project">
                                     <a href="www.github.com" class="hidden_cont"><i class="bi bi-github fs-6">&ThinSpace; Github Projects</i></a>
                                 </div>
                                 <h2 class="font-title">PSD Design</h2>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="image-section" data-aos="fade-right" data-aos-duration="300" data-aos-delay="100">
-                <img src="./static/img/img_4.jpg" alt="Design Image">
+                <img src="static/img/img_4.jpg" alt="Design Image">
             </div>
         </div>
         <section id="services" class="section-3 container m-auto"  data-aos="flip-right" data-aos-duration="600" data-aos-delay="100">
@@ -318,7 +318,7 @@
             <h1 class="main-title font-header">Our Recent Updates, Blog, Tips, Tricks & More</h1>
             <div class="blog-cards">
                 <div class="blog-card">
-                    <img src="./static/img/blog1.jpg" alt="Web Development">
+                    <img src="static/img/blog1.jpg" alt="Web Development">
                     <div class="card-date helvetica">23 Dec</div>
                     <div class="card-content">
                         <h3 class="card-category font-title">Web Development</h3>
@@ -326,7 +326,7 @@
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="/static/img/blog2.jpg" alt="Branding">
+                    <img src="static/img/blog2.jpg" alt="Branding">
                     <div class="card-date helvetica">23 Dec</div>
                     <div class="card-content">
                         <h3 class="card-category font-title">Branding</h3>
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="/static/img/blog3.jpg" alt="Social Media">
+                    <img src="static/img/blog3.jpg" alt="Social Media">
                     <div class="card-date helvetica">23 Dec</div>
                     <div class="card-content">
                         <h3 class="card-category font-title">Social Media</h3>
@@ -469,8 +469,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="./static/js/main.js"></script>
-    <script src="./static/js/smooth_scroll.js"></script>
-    <script src="./static/js/portfolio.js"></script>
+    <script src="static/js/main.js"></script>
+    <script src="static/js/smooth_scroll.js"></script>
+    <script src="static/js/portfolio.js"></script>
 </body>
 </html>
