--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="minimum-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, target-densitydpi=device-dpi">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
     <link rel="stylesheet" href="static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,23 +14,23 @@
     <title>Sarif. Portfolio</title>
 </head>
 <body>
-    <div id="main_cont">
-        <div class="navbar" id="Main_navbar">
-            <div class="container" id="inner_navbar">
-                <div id="Main_Header" class="header">Sharif.</div>
-                <div id="items_list" class="d-flex">
-                    <a href="#Home" class="item ms-2">home</a>
-                    <a href="#About" class="item ms-2">about</a>
-                    <a href="#Portfolio" class="item ms-2">Portfolio</a>
-                    <a href="#Skill" class="item ms-2">skill</a>
-                    <a href="#services" class="item ms-2">services</a>
-                    <a href="#blog" class="item ms-2">blog</a>
-                    <a href="#contact" class="item ms-2">contact</a>
-                </div>
-                <i class="bi bi-list" id="nav-btn"></i>
+    <div class="navbar" id="Main_navbar">
+        <div class="container" id="inner_navbar">
+            <div id="Main_Header" class="header">Sharif.</div>
+            <div id="items_list" class="d-flex">
+                <a href="#Home" class="item ms-2">home</a>
+                <a href="#About" class="item ms-2">about</a>
+                <a href="#Portfolio" class="item ms-2">Portfolio</a>
+                <a href="#Skill" class="item ms-2">skill</a>
+                <a href="#services" class="item ms-2">services</a>
+                <a href="#blog" class="item ms-2">blog</a>
+                <a href="#contact" class="item ms-2">contact</a>
             </div>
+            <i class="bi bi-list" id="nav-btn"></i>
         </div>
-        <section id="Home" class="section-1 container-md"  data-aos="zoom-in" data-aos-duration="1000">
+    </div>
+    <div id="main_cont">
+        <section id="Home" class="section-1 container"  data-aos="zoom-in" data-aos-duration="1000">
             <div class="hero-content">
                 <h2 class="greeting font-title">Hello, I’m</h2>
                 <div class="name font-header">Sharif Mohammad Sowrov</div>
