--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 d-flex">
-                    <div class="my-auto"><sub>"CreatedBy"</sub><span  class="font-header helvetica">NHL</span>.</div>
+                    <div class="my-auto"><sub>"CreatedBy"</sub><span  class="font-title helvetica">SomethingIDK</span>.</div>
                 </div>
             </div>
             <div class="hr pb-4"></div>
