Flip Animation Delete

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <img src="static/img/img_4.jpg" alt="Design Image">
             </div>
         </div>
-        <section id="services" class="section-3 container m-auto"  data-aos="flip-right" data-aos-duration="600" data-aos-delay="100">
+        <section id="services" class="section-3 container m-auto"  data-aos="fade-right" data-aos-duration="600" data-aos-delay="100">
             <h2 class="section-title font-title text-secoundary">Services</h2>
             <h1 class="main-title font-header">What I Do for Clients</h1>
             <p class="section-description text-center font-desc-2">Most common methods for designing websites that work well on desktop is responsive and adaptive design</p>
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </section>
-        <section class="testimonials-section"  data-aos="flip-left" data-aos-duration="600" data-aos-delay="100">
+        <section class="testimonials-section"  data-aos="fade-left" data-aos-duration="600" data-aos-delay="100">
             <h2 class="section-title font-title">Testimonials</h2>
             <h1 class="main-title font-headers">What My Clients Say</h1>
             <p class="section-description font-desc-2">See what my clients have to say about the quality of work and services I provide.</p>
